# rotors_simulator

rotors_control/: CMakeLists.txt  package.xml
rotors_control/include/rotors_control/: Logic.hpp  mocap_output.h  telemetry.h
rotors_control/src/nodes/: Hiperlab_Controller.cpp  Hiperlab_Controller.hpp  lee_position_controller_node2.cpp  lee_position_controller_node2.h  roll_pitch_yawrate_thrust_controller_node2.cpp  roll_pitch_yawrate_thrust_controller_node2.h  simulator.cpp
rotors_description/meshes/: largequad.STL  largequad.dae
rotors_description/urdf/: component_snippets.xacro  largequad.xacro  largequad_base.xacro  multirotor_base.xacro
rotors_gazebo/: CMakeLists.txt  package.xml
rotors_gazebo/launch/: RFS_Tunnels.launch  largequad.launch  mav_hovering_example2.launch  spawn_mav.launch
rotors_gazebo/src/: hiperlab_example.cpp  hovering_example2.cpp
rotors_gazebo/worlds/: RFS_Tunnels.world  basic.world  largequad.world
rotors_gazebo_plugins/: CMakeLists.txt  package.xml
rotors_gazebo_plugins/include/rotors_gazebo_plugins/: gazebo_hiperlab_interface.h  gazebo_ros_interface_plugin.h  gazebo_ros_interface_plugin.h.bak
rotors_gazebo_plugins/src/: gazebo_hiperlab_interface.cpp  gazebo_hiperlab_interface.cpp.bak  gazebo_motor_model.cpp  gazebo_motor_model.cpp.bak  gazebo_ros_interface_plugin.cpp
rotors_hil_interface/: CMakeLists.txt
